--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pipenv sync --dev
+        pip install pipenv
+        pipenv sync --dev --pre
     - name: Running Test
       run: |
         pipenv shell
