--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,5 +30,11 @@ jobs:
         pipenv sync --dev --pre
     - name: Running Test
       run: |
-        ls
         pipenv run robot -d Results --report index.html tests/staking/get_staking_balance.robot
+    - name: Upload reports
+      uses: actions/upload-artifact@v1
+      if: always()
+      with:
+        name: reports
+        # set path to Robot Framework results reports. Exclude dummy file that is needed because of ppodgorsek image priviledges.
+        path: ${{ github.workspace }}/Results
